--- a/contact.css
+++ b/contact.css
@@ -30,19 +30,11 @@ header section.logo .top .search {
 }
 header section.logo .top .search img {
   height: 5vh;
-  font-size: 1.3rem;
   vertical-align: bottom;
 }
 header section.logo .top .search input {
-  font-size: 1.3rem;
   display: inline-block;
   height: 5vh;
-}
-header section.logo .top .search input::-moz-placeholder {
-  font-size: 1.3rem;
-}
-header section.logo .top .search input::placeholder {
-  font-size: 1.3rem;
 }
 header section.logo .top .search input:focus {
   outline-color: rgb(255, 151, 9);
@@ -70,11 +62,11 @@ header section.nav-list nav ul {
   border: 3px solid rgb(255, 151, 9);
   border-radius: 30px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 header section.nav-list nav ul li {
-  padding: 0.5rem 3rem;
-  font-size: 2rem;
+  padding: 0.5rem 0;
+  font-size: 1.5rem;
   list-style-type: none;
 }
 header section.nav-list nav ul li a {
@@ -242,7 +234,7 @@ section.contact form .tel input,
 section.contact form .commit input {
   font-size: 1.3rem;
   position: relative;
-  right: 14rem;
+  right: 10rem;
   border-radius: 5px;
 }
 section.contact form .name input:focus,
@@ -254,12 +246,12 @@ section.contact form .commit input:focus {
 }
 section.contact form .option input {
   position: relative;
-  right: 27rem;
+  right: 19rem;
 }
 section.contact form .option label {
   font-size: 1.3rem;
   position: relative;
-  right: 27rem;
+  right: 19rem;
 }
 section.contact form textarea {
   font-size: 1.3rem;
