--- a/item.css
+++ b/item.css
@@ -29,19 +29,11 @@ header section.logo .top .search {
 }
 header section.logo .top .search img {
   height: 5vh;
-  font-size: 1.3rem;
   vertical-align: bottom;
 }
 header section.logo .top .search input {
-  font-size: 1.3rem;
   display: inline-block;
   height: 5vh;
-}
-header section.logo .top .search input::-moz-placeholder {
-  font-size: 1.3rem;
-}
-header section.logo .top .search input::placeholder {
-  font-size: 1.3rem;
 }
 header section.logo .top .search input:focus {
   outline-color: rgb(255, 151, 9);
@@ -69,11 +61,11 @@ header section.nav-list nav ul {
   border: 3px solid rgb(255, 151, 9);
   border-radius: 30px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 header section.nav-list nav ul li {
-  padding: 0.5rem 3rem;
-  font-size: 2rem;
+  padding: 0.5rem 0;
+  font-size: 1.5rem;
   list-style-type: none;
 }
 header section.nav-list nav ul li a {
@@ -133,113 +125,114 @@ body {
   background-color: rgb(242, 242, 242);
 }
 
-section {
+section.single-product {
   width: 70vw;
   margin: 3rem auto;
   display: flex;
 }
-section .list {
+section.single-product .list {
   width: 15vw;
 }
-section .list ul {
+section.single-product .list ul {
   background-color: rgb(140, 132, 126);
   text-align: center;
 }
-section .list ul li {
+section.single-product .list ul li {
   list-style-type: none;
   padding: 1rem 0;
 }
-section .list ul li a {
+section.single-product .list ul li a {
   color: white;
   text-decoration: none;
 }
-section .list ul li a:hover {
+section.single-product .list ul li a:hover {
   color: rgb(255, 151, 9);
 }
-section .main-area {
+section.single-product .main-area {
   width: 55vw;
   border: 5px solid rgb(140, 132, 126);
 }
-section .main-area .main {
+section.single-product .main-area .main {
   display: flex;
   margin-top: 0.5rem;
 }
-section .main-area .main .product {
+section.single-product .main-area .main .product {
   width: 30vw;
   margin: 0 auto;
 }
-section .main-area .main .product .pic {
+section.single-product .main-area .main .product .pic {
+  cursor: pointer;
   margin: 0 0.3rem 1rem 0.3rem;
 }
-section .main-area .main .product .pic img {
+section.single-product .main-area .main .product .pic img {
   width: 100%;
+  height: 540px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
-section .main-area .main .product .other-pic {
+section.single-product .main-area .main .product .other-pic {
   display: flex;
   background-color: rgb(251, 242, 226);
-  padding: 0.5rem;
-  margin-left: 0.25rem;
+  padding: 0.25rem;
+  margin: 0 0 0 0.25rem;
 }
-section .main-area .main .product .other-pic .other-1,
-section .main-area .main .product .other-pic .other-2,
-section .main-area .main .product .other-pic .other-3 {
+section.single-product .main-area .main .product .other-pic .other {
   margin: 0 0.3rem;
+  cursor: pointer;
 }
-section .main-area .main .product .other-pic .other-1 img,
-section .main-area .main .product .other-pic .other-2 img,
-section .main-area .main .product .other-pic .other-3 img {
+section.single-product .main-area .main .product .other-pic .other img {
   display: block;
   width: 100%;
 }
-section .main-area .main .content {
+section.single-product .main-area .main .content {
   display: flex;
   flex-direction: column;
   width: 25vw;
 }
-section .main-area .main .content h1 {
+section.single-product .main-area .main .content h1 {
   color: secondColor;
   padding: 0 0.3rem 1rem 0.3rem;
   font-size: 1.6rem;
 }
-section .main-area .main .content .desc {
+section.single-product .main-area .main .content .desc {
   flex-grow: 1;
 }
-section .main-area .main .content .desc p {
+section.single-product .main-area .main .content .desc p {
   color: secondColor;
   padding: 0 0.3rem 1rem 0.3rem;
   text-indent: 1.5rem;
   font-size: 1.2rem;
 }
-section .main-area .main .content .price strong {
+section.single-product .main-area .main .content .price strong {
   color: rgb(237, 21, 36);
   font-size: 2.5rem;
 }
-section .main-area .main .content .btns {
+section.single-product .main-area .main .content .btns {
   display: flex;
   justify-content: center;
   padding: 1rem;
 }
-section .main-area .main .content .btns button.minus,
-section .main-area .main .content .btns .plus {
+section.single-product .main-area .main .content .btns button.minus,
+section.single-product .main-area .main .content .btns .plus {
   font-size: 2rem;
   padding: 0.25rem 0.6rem;
   border-radius: 5px;
 }
-section .main-area .main .content .btns button.minus {
+section.single-product .main-area .main .content .btns button.minus {
   cursor: not-allowed;
 }
-section .main-area .main .content .btns button.plus {
+section.single-product .main-area .main .content .btns button.plus {
   cursor: pointer;
 }
-section .main-area .main .content .btns input {
+section.single-product .main-area .main .content .btns input {
   text-align: center;
-  font-size: 1.3rem;
+  font-size: 1.05rem;
 }
-section .main-area .main .content .purchase {
+section.single-product .main-area .main .content .purchase {
   display: flex;
   justify-content: space-around;
 }
-section .main-area .main .content .purchase button.add-cart {
+section.single-product .main-area .main .content .purchase button.add-cart {
   color: white;
   background-color: rgb(255, 151, 9);
   font-size: 1.5rem;
@@ -248,7 +241,7 @@ section .main-area .main .content .purchase button.add-cart {
   border-radius: 10px;
   cursor: pointer;
 }
-section .main-area .main .content .purchase button.purchase {
+section.single-product .main-area .main .content .purchase button.purchase {
   color: white;
   background-color: rgb(237, 21, 36);
   font-size: 1.5rem;
@@ -257,25 +250,25 @@ section .main-area .main .content .purchase button.purchase {
   border-radius: 10px;
   cursor: pointer;
 }
-section .main-area .dash {
+section.single-product .main-area .dash {
   background-color: rgb(140, 132, 126);
   height: 10px;
   margin: 1.5rem 0;
 }
-section .main-area p {
+section.single-product .main-area p {
   color: rgb(58, 58, 58);
   font-size: 2rem;
 }
-section .main-area .relate-item {
+section.single-product .main-area .relate-item {
   display: flex;
   margin: 1rem 0;
 }
-section .main-area .relate-item .item {
+section.single-product .main-area .relate-item .item {
   width: 13.25vw;
   height: 20vh;
   margin: 0 0.25rem;
 }
-section .main-area .relate-item .item a img {
+section.single-product .main-area .relate-item .item a img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
