--- a/news.scss
+++ b/news.scss
@@ -7,7 +7,7 @@ section.news {
     background-color: $thirdColor;
     .card {
       width: 70vw;
-      // height: 30vh;
+
       padding: 2rem;
       margin: 2rem auto 0 auto;
       position: relative;
@@ -15,19 +15,19 @@ section.news {
       h1 {
         color: $secondColor;
         font-size: 2.5rem;
+        letter-spacing: 0.35rem;
         position: absolute;
         top: -30px;
       }
 
       .pic {
         width: 35vw;
-        height: 30vh;
 
         a {
           img {
             display: block;
             width: 100%;
-            height: 100%;
+            height: 30vh;
             object-fit: cover;
           }
         }
