--- a/products.css
+++ b/products.css
@@ -29,19 +29,11 @@ header section.logo .top .search {
 }
 header section.logo .top .search img {
   height: 5vh;
-  font-size: 1.3rem;
   vertical-align: bottom;
 }
 header section.logo .top .search input {
-  font-size: 1.3rem;
   display: inline-block;
   height: 5vh;
-}
-header section.logo .top .search input::-moz-placeholder {
-  font-size: 1.3rem;
-}
-header section.logo .top .search input::placeholder {
-  font-size: 1.3rem;
 }
 header section.logo .top .search input:focus {
   outline-color: rgb(255, 151, 9);
@@ -69,11 +61,11 @@ header section.nav-list nav ul {
   border: 3px solid rgb(255, 151, 9);
   border-radius: 30px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 header section.nav-list nav ul li {
-  padding: 0.5rem 3rem;
-  font-size: 2rem;
+  padding: 0.5rem 0;
+  font-size: 1.5rem;
   list-style-type: none;
 }
 header section.nav-list nav ul li a {
@@ -133,51 +125,51 @@ body {
   background-color: rgb(242, 242, 242);
 }
 
-section {
+section.all-product {
   width: 70vw;
   margin: 3rem auto;
   display: flex;
 }
-section .list {
+section.all-product .list {
   width: 15vw;
 }
-section .list ul {
+section.all-product .list ul {
   background-color: rgb(140, 132, 126);
   text-align: center;
 }
-section .list ul li {
+section.all-product .list ul li {
   list-style-type: none;
   padding: 1rem 0;
 }
-section .list ul li a {
+section.all-product .list ul li a {
   color: white;
   text-decoration: none;
 }
-section .list ul li a:hover {
+section.all-product .list ul li a:hover {
   color: rgb(255, 151, 9);
 }
-section .product {
+section.all-product .product {
   width: 55vw;
   margin: auto;
   padding: 0 0.5rem;
   border: 5px solid rgb(140, 132, 126);
 }
-section .product .top-image {
+section.all-product .product .top-image {
   margin: 1rem 0;
   height: 30vh;
   background-image: url("./picture/product/top-banner.png");
   background-size: cover;
 }
-section .product .order {
+section.all-product .product .order {
   display: flex;
   background-color: rgb(140, 132, 126);
 }
-section .product .order p {
+section.all-product .product .order p {
   color: white;
   padding: 0.25rem 0;
   margin: 0.5rem;
 }
-section .product .order button.update {
+section.all-product .product .order button.update {
   border: none;
   padding: 0.2rem 0.4rem;
   margin: 0.5rem;
@@ -186,7 +178,7 @@ section .product .order button.update {
   background-color: rgb(255, 151, 9);
   border-radius: 10px;
 }
-section .product .order button.price {
+section.all-product .product .order button.price {
   border: none;
   padding: 0.2rem 0.4rem;
   margin: 0.5rem;
@@ -194,54 +186,57 @@ section .product .order button.price {
   cursor: pointer;
   border-radius: 10px;
 }
-section .product .cards {
+section.all-product .product .cards {
   display: flex;
   justify-content: space-between;
   padding: 1rem 0;
 }
-section .product .cards .card {
+section.all-product .product .cards .card {
   width: 15vw;
   display: flex;
   flex-direction: column;
   padding: 0 0.1rem;
   margin: 0 0.4rem;
   background-color: rgb(251, 242, 226);
+  transition: 0.3s;
 }
-section .product .cards .card .pic img {
+section.all-product .product .cards .card .pic img {
   width: 100%;
   height: 24vh;
   display: block;
   -o-object-fit: cover;
      object-fit: cover;
 }
-section .product .cards .card p {
+section.all-product .product .cards .card p {
   flex: 1 1 70px;
 }
-section .product .cards .card .price {
+section.all-product .product .cards .card .price {
   margin-top: auto;
   display: flex;
 }
-section .product .cards .card .price p {
+section.all-product .product .cards .card .price p {
   font-size: 1.2rem;
   margin-right: auto;
 }
-section .product .cards .card .price button {
+section.all-product .product .cards .card .price button {
   padding: 0.25rem 0.5rem;
   color: white;
   background-color: rgb(255, 151, 9);
   cursor: pointer;
   border: none;
 }
-section .product .cards .card:hover {
+section.all-product .product .cards .card:hover {
   background-color: rgb(255, 236, 197);
+  transform: scale(1.05);
+  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.356);
 }
-section .product .page {
+section.all-product .product .page {
   margin: 2rem auto;
   display: flex;
   justify-content: center;
   background-color: rgb(140, 132, 126);
 }
-section .product .page .page-first {
+section.all-product .product .page .page-first {
   background-color: rgb(255, 151, 9);
   width: 48px;
   height: 48px;
@@ -250,12 +245,12 @@ section .product .page .page-first {
   align-items: center;
   margin: 0 1rem;
 }
-section .product .page .page-first a {
+section.all-product .product .page .page-first a {
   text-align: center;
   color: white;
   text-decoration: none;
 }
-section .product .page .page-other {
+section.all-product .product .page .page-other {
   background-color: rgb(140, 132, 126);
   margin: 0 1rem;
   width: 48px;
@@ -264,12 +259,12 @@ section .product .page .page-other {
   justify-content: center;
   align-items: center;
 }
-section .product .page .page-other a {
+section.all-product .product .page .page-other a {
   display: block;
   text-decoration: none;
   color: white;
 }
-section .product .page .page-next {
+section.all-product .product .page .page-next {
   background-color: rgb(255, 151, 9);
   width: 64px;
   height: 48px;
@@ -278,7 +273,7 @@ section .product .page .page-next {
   align-items: center;
   margin: 0 1rem;
 }
-section .product .page .page-next a {
+section.all-product .product .page .page-next a {
   text-align: center;
   color: white;
   text-decoration: none;
